# MWU

./: .gitignore  AGENTS.md  README.md  maa_utils.py  main.py  pyproject.toml  scheduler_manager.py
.github/: .copilot-commit-message-instructions.md
.github/workflows/: build.yml
config/: settings.json  task_config.json
deploy/: install.yml
front/: .oxfmtrc.json  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
front/src/: App.vue  main.ts
front/src/assets/: main.css
front/src/components/: LeftPanel.vue  MediumPanel.vue  OptionItem.vue  RightPanel.vue  SchedulerTaskDialog.vue  TaskOptionPanel.vue  TaskSelectList.vue  UpdateDialog.vue
front/src/composables/: index.ts  useTaskConfig.ts
front/src/locales/: en-US.json  zh-CN.json
front/src/router/: index.ts
front/src/script/: api.ts  sse.ts
front/src/stores/: settings.ts  taskConfig.ts  userConfig.ts
front/src/types/: scheduler.ts  settings.ts  taskConfig.ts
front/src/views/: PanelView.vue  SettingView.vue
models/: api.py  interface.py  scheduler.py  settings.py  task_config.py
updater/: go.mod
